--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,6 @@
       <a href="https://github.com/AnnQK">GitHub</a>
     </footer>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
