Feat: add template and add ligic for budget records

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,14 @@
 
         <button type="submit">Add</button>
       </form>
+      <div className="listWrapper">
+        <ul class="invoices-list">
+          <li class="list-title">Invoices</li>
+        </ul>
+        <ul class="payments-list">
+          <li class="list-title">Payments</li>
+        </ul>
+      </div>
     </main>
     <footer>
       <a href="https://github.com/AnnQK">GitHub</a>
